# petprep

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_devel  MANIFEST.in  NOTICE  README.rst  get_version.py  long_description.rst  pyproject.toml  setup.cfg  setup.py
docs/: api.rst  conf.py  faq.rst  installation.rst  license.rst  outputs.rst  spaces.rst  usage.rst  workflows.rst
docs/_static/SampleReport/: sample_report.html
petprep/: __about__.py  __init__.py  __main__.py  _version.py  config.py
petprep/cli/: parser.py  run.py  version.py  workflow.py
petprep/cli/tests/: test_parser.py  test_version.py
petprep/data/: boilerplate.bib  reports-spec.yml
petprep/data/tests/: config.toml
petprep/interfaces/: __init__.py  confounds.py  maths.py  patches.py  reports.py
petprep/interfaces/tests/: conftest.py  test_confounds.py  test_maths.py  test_reports.py
petprep/reports/: conftest.py  core.py
petprep/utils/: bids.py  confounds.py  meepi.py  misc.py  sentry.py  subsegment.py
petprep/workflows/: base.py  tests.py
petprep/workflows/pet/: __init__.py  base.py  confounds.py  gtmseg.py  hmc.py  hmc2.py  kinmod.py  outputs.py  pvc.py  registration.py  resampling.py  subsegment.py  t2s.py
petprep/workflows/pet/tests/: test_confounds.py
petprep_workflows/: init_generate_tacs.py  subsegment.py
scripts/: fetch_templates.py
wrapper/: LICENSE  fmriprep_docker.py
