[metadata]
author = The NiPreps Developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = fMRIPrep is a robust and easy-to-use pipeline for preprocessing of diverse fMRI data.
license = Apache License, Version 2.0
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation=https://fmriprep.readthedocs.io/
    Paper=https://doi.org/10.1038/s41592-018-0235-4
    Docker Images=https://hub.docker.com/r/nipreps/fmriprep/tags/
    NiPreps=https://www.nipreps.org/
url = https://github.com/nipreps/fmriprep

[options]
python_requires = >=3.7
install_requires =
    nibabel >= 3.0
    nipype >= 1.5.1
    nitransforms ~= 21.0.0
    niworkflows ~= 1.4.5
    numpy
    pandas
    psutil >= 5.4
    pybids >= 0.12.1
    requests
    sdcflows ~= 2.0.9
    smriprep ~= 0.8.0
    tedana ~= 0.0.9
    templateflow >= 0.6
    toml
test_requires =
    coverage
    codecov
    pytest
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 1.8
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-napoleon
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk ~= 1.3.0
tests =
    coverage
    codecov
    pytest
    pytest-cov
    pytest-env
maint =
    fuzzywuzzy
    python-Levenshtein
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(maint)s
    %(sentry)s
    %(tests)s

[options.package_data]
fmriprep =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/NOTICE
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    data/tests/config.toml
    data/tests/ds000005/*
    data/tests/ds000005/sub-01/anat/*
    data/tests/ds000005/sub-01/func/*
    VERSION

[options.entry_points]
console_scripts =
    fmriprep=fmriprep.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = fmriprep/_version.py
versionfile_build = fmriprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
